Fix white space at bottom footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,10 @@ body {
     flex: 1 0 auto;
 }
 
+.easter-egg {
+    color: #5C8001;
+}
+
 /* Footer styling */
 .footer-links li {
     display: inline-block;
